Cpp 솔루션 추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 python/__pycache__/
+.idea/
+cpp/.vs/
+cpp/Debug/
+cpp/x64/
+cpp/ZeroMQ_Version/x64/
+cpp/ZeroMQ_Version/Debug/
+cpp/ZeroMQ_Version/*.dll
